--- a/src/ConsoleApplication/ConsoleApplication.csproj
+++ b/src/ConsoleApplication/ConsoleApplication.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>ConsoleApplication</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>cc97b4f9</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,23 +33,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotNetOpenAuth.Core">
-      <HintPath>..\ExactOnline.Client.OAuth\bin\Debug\DotNetOpenAuth.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="DotNetOpenAuth.OAuth2.Client">
-      <HintPath>..\ExactOnline.Client.OAuth\bin\Debug\DotNetOpenAuth.OAuth2.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="ExactOnline.Client.Models">
-      <HintPath>..\ExactOnline.Client.Models\bin\Debug\ExactOnline.Client.Models.dll</HintPath>
-    </Reference>
-    <Reference Include="ExactOnline.Client.OAuth">
-      <HintPath>..\ExactOnline.Client.OAuth\bin\Debug\ExactOnline.Client.OAuth.dll</HintPath>
-    </Reference>
-    <Reference Include="ExactOnline.Client.Sdk">
-      <HintPath>..\ExactOnline.Client.Sdk\bin\Debug\ExactOnline.Client.Sdk.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Extensions">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,8 +56,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExactOnline.Client.Models\ExactOnline.Client.Models.vbproj">
+      <Project>{bd9a83f1-1106-45bb-bcba-a54d6c213fdc}</Project>
+      <Name>ExactOnline.Client.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ExactOnline.Client.OAuth\ExactOnline.Client.OAuth.csproj">
+      <Project>{610fe8c1-f026-4567-8b47-8cb6338251f6}</Project>
+      <Name>ExactOnline.Client.OAuth</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ExactOnline.Client.Sdk\ExactOnline.Client.Sdk.csproj">
+      <Project>{ee442aa1-c51a-4531-92da-a7d9c7b73973}</Project>
+      <Name>ExactOnline.Client.Sdk</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
