Fixed compilation error in test solution. Updated repository with latest set of Exact Online API models.

--- a/src/ExactOnline.Client.Models/ExactOnline.Client.Models.vbproj
+++ b/src/ExactOnline.Client.Models/ExactOnline.Client.Models.vbproj
@@ -99,6 +99,7 @@
     <Compile Include="OpeningBalance.vb" />
     <Compile Include="Payroll.vb" />
     <Compile Include="Project.vb" />
+    <Compile Include="Purchase.vb" />
     <Compile Include="PurchaseEntry.vb" />
     <Compile Include="PurchaseOrder.vb" />
     <Compile Include="Sales.vb" />
