--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,8 @@ _Pvt_Extensions/
 ModelManifest.xml
 /.vs/config/applicationhost.config
 /.vs/ClientSdk/v15/Server/sqlite3
+
+# Test application details
+testapp.config
+
+*.lock
