--- a/src/ExactOnline.Client.OAuth/ExactOnline.Client.OAuth.csproj
+++ b/src/ExactOnline.Client.OAuth/ExactOnline.Client.OAuth.csproj
@@ -76,6 +76,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
