--- a/src/ExactOnline.Client.Models/ExactOnline.Client.Models.vbproj
+++ b/src/ExactOnline.Client.Models/ExactOnline.Client.Models.vbproj
@@ -111,6 +111,7 @@
     <Compile Include="System.vb" />
     <Compile Include="Users.vb" />
     <Compile Include="VAT.vb" />
+    <Compile Include="Webhooks.vb" />
     <Compile Include="Workflow.vb" />
   </ItemGroup>
   <ItemGroup>
