--- a/test/ExactOnline.Client.Sdk.UnitTests/ExactOnline.Client.Sdk.UnitTests.csproj
+++ b/test/ExactOnline.Client.Sdk.UnitTests/ExactOnline.Client.Sdk.UnitTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ControllerTest.cs" />
     <Compile Include="EntityControllerTest.cs" />
     <Compile Include="EntityConverterTest.cs" />
+    <Compile Include="ExactOnlineCLient.cs" />
     <Compile Include="ExactOnlineQueryTest.cs" />
     <Compile Include="MockObjects\ApiConnectionEntityControllerMock.cs" />
     <Compile Include="MockObjects\ApiConnectionMock.cs" />
