--- a/ConsoleApp1/App.config
+++ b/ConsoleApp1/App.config
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
+  <appSettings>
+    <add key="ClientId" value="4bb27c0f-1adf-4a3f-a60e-9938ff301126"/>
+    <add key="Secret" value="WrtSZyoyFtz0"/>
+  </appSettings>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
 </configuration>
