--- a/ConsoleApp1/ExactTokenGeneration.csproj
+++ b/ConsoleApp1/ExactTokenGeneration.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BD0930A3-1B8A-425D-9096-D3E9F1A31279}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>ExactTokenGeneration</RootNamespace>
+    <AssemblyName>ExactTokenGeneration</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
